# CMake-setup

./: CMakeLists.txt  README.md  glad.c
Application/: CMakeLists.txt
Application/Application/: Application.cpp  Camera.cpp  Mesh.cpp  ShaderClass.cpp  Texture.cpp
Application/Application/core/: Texture.h  VertexArrayObject.h
dependencies/Application/Application/: Application.cpp  Camera.cpp  ElementBufferObject.cpp  ShaderClass.cpp  VertexArrayObject.cpp  VertexBufferObject.cpp
dependencies/Application/Application/core/: Application.hpp  Camera.h  ElementBufferObject.h  Mesh.h  ShaderClass.h  Texture.h  VertexBufferObject.h
dependencies/OpenGL/glm/test/gtc/: gtc_noise.cpp  gtc_user_defined_types.cpp
dependencies/OpenGL/glm/test/gtx/: gtx_random.cpp
dependencies/OpenGL/noise/: CMakeLists.txt
glad/: CMakeLists.txt
glad/include/glad/: glad.h
src/: Block.cpp  Chunck.cpp  Main.cpp
src/header/: Block.hpp  Chunck.hpp  Game.hpp
stb/: CMakeLists.txt
